# devops

./: .gitignore  LICENSE  README.md
.agents/rules/: project-context.md
.agents/skills/mcp-toolbox-postgres/: SKILL.md
.agents/skills/repo-research/: SKILL.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  miniconda_ci.yml  python_ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
code_server/: Makefile  README.md  coder.ps1  docker-compose.yml
devcontainer_images/miniconda/: Dockerfile  README.md
devcontainer_images/miniconda/template/: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
devcontainer_images/miniconda/template/.devcontainer/: devcontainer.json  docker-compose.yml
devcontainer_images/miniconda/template/scripts/: entrypoint.sh  run.sh
devcontainer_images/python/: Dockerfile
devcontainer_images/src/miniconda/: Dockerfile  README.md
devcontainer_images/src/python/: Dockerfile
setup_devenv/: README.md  vscode-settings.json
setup_devenv/clean_setup_restore_backup/: main_restore_backup_ubuntu_debian.sh  wsl.ps1
setup_devenv/create_backup/: 00-backup-rhel.sh  00-backup-ubuntu.sh  00-backup.sh  main_create_backup_ubuntu_debian.sh  wsl.ps1
setup_devenv/devenv_config/: README.md  helper_functions.sh  venv_setup.sh
setup_devenv/devenv_config/templates/: .zshrc-custom-template  venv_cmds.sh-template
setup_devenv/doublecmd/: doublecmd.xml  session.ini
setup_devenv/linux_ubuntu/: setup-env.sh
setup_devenv/python/venv_pip/: README.md  venv_pip_setup.py  venv_setup.py
setup_devenv/python/venv_pip/templates/: venv_commands.sh-template
setup_devenv/python/virtualenvs/: README.md
setup_devenv/windows/: .wslconfig  doublecmd.ps1  mingw.ps1  packages.ps1  setup-wsl2-rhel8.sh  setup-wsl2.sh  terminal.ps1  wsl2.ps1
setup_devenv/windows/terminal/: settings.json
setup_devenv/wsl2_clean_setup_restore_backup/: 00-res_backup_new_rhel.sh  00-restore_backup_new_debian.sh  01-res_backup_parcial.ps1  01-restore_backup_new_ubuntu-0.2.sh  01-restore_backup_new_ubuntu.sh
specs/001-setup-wsl2-docker/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-setup-wsl2-docker/checklists/: requirements.md
vscode_pack/: README.md
